tests/error/inout_errors/moved.err
Error: Not owned (at $FILE:17:8)
   | 
15 | def test(q: qubit) -> None:
16 |     foo(q)
17 |     use(q)
   |         ^ Function `use` wants to take ownership of this argument, but
   |           `test` doesn't own `q`
   | 
15 | def test(q: qubit) -> None:
   |          -------- Argument `q` is only borrowed. Consider taking ownership:
   |                   `q: qubit @owned`

Guppy compilation failed due to 1 previous error
